OO-7733: New feature to schedule online appointments with Zoom and others